--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -20,5 +20,5 @@ jobs:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-    - readme:
-      - README.md
+      readme:
+        - README.md
